--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.10",
-    "npm": "^6.1.0"
+    "method-override": "^2.3.10"
   }
 }
